--- a/index.html
+++ b/index.html
@@ -1673,8 +1673,7 @@ window.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 <!-- 加入 Google API SDK -->
-<script src="https://accounts.google.com/gsi/client" async defer></script>
-
+<script async="" defer="" src="https://accounts.google.com/gsi/client"></script>
 <script>
 const GOOGLE_CLIENT_ID = '894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleusercontent.com';
 const BACKUP_FILE_NAME = 'cleaner_backup.json';
@@ -1684,14 +1683,40 @@ function initGoogleBackup() {
     client_id: GOOGLE_CLIENT_ID,
     scope: 'https://www.googleapis.com/auth/drive.file',
     callback: async (tokenResponse) => {
+
       const token = tokenResponse.access_token;
-      const choice = prompt('請選擇操作：\n1 = 備份至 Google 雲端\n2 = 從 Google 雲端還原');
+      
+setTimeout(() => {
+  \
+Swal.fire({
+  title: '請選擇操作',
+  input: 'radio',
+  inputOptions: {
+    '1': '備份至 Google 雲端',
+    '2': '從 Google 雲端還原'
+  },
+  inputValidator: (value) => {
+    if (!value) return '請選擇一項操作';
+  },
+  confirmButtonText: '確定'
+}).then(async (result) => {
+  if (result.isConfirmed) {
+    const choice = result.value;
+    if (choice === '1') {
+      await backupToDrive(token);
+    } else if (choice === '2') {
+      await restoreFromDrive(token);
+    }
+  }
+});
+
       if (choice === '1') {
         await backupToDrive(token);
       } else if (choice === '2') {
         await restoreFromDrive(token);
       }
-    },
+}, 0);
+},
   });
   tokenClient.requestAccessToken();
 }
@@ -1709,8 +1734,8 @@ async function backupToDrive(token) {
     body: form,
   });
 
-  if (res.ok) alert('✅ 備份完成！');
-  else alert('❌ 備份失敗');
+  if (res.ok) Swal.fire({ text: '✅ 備份完成！', icon: 'info' });
+  else Swal.fire({ text: '❌ 備份失敗', icon: 'info' });
 }
 
 async function restoreFromDrive(token) {
@@ -1720,7 +1745,7 @@ async function restoreFromDrive(token) {
   );
   const list = await listRes.json();
   if (!list.files || list.files.length === 0) {
-    alert('找不到備份檔案');
+    Swal.fire({ text: '找不到備份檔案', icon: 'info' });
     return;
   }
 
@@ -1731,7 +1756,15 @@ async function restoreFromDrive(token) {
   );
   const data = await dataRes.json();
 
-  if (!confirm('確認覆蓋本地資料並還原？')) return;
+  const confirmed = await Swal.fire({
+  title: '請確認',
+  text: '確認覆蓋本地資料並還原？',
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonText: '確定',
+  cancelButtonText: '取消'
+});
+if (!confirmed.isConfirmed) return;
 
   if (data.orders) { orders = data.orders; save(KEY, orders); }
   if (data.staffList) { staffList = data.staffList; save(STAFF_KEY, staffList); initStaffSelects(); }
@@ -1740,7 +1773,7 @@ async function restoreFromDrive(token) {
   if (data.expCats) { expCats = data.expCats; save(EXP_CAT_KEY, expCats); }
 
   refreshTable(); refreshExpense();
-  alert('✅ 還原完成！');
+  Swal.fire({ text: '✅ 還原完成！', icon: 'info' });
 }
 
 // 綁定 ☁️Google 按鈕
