--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ mark {
 <strong>搜尋</strong>
 <input id="searchInput" placeholder="姓名 / 電話 / 地址" style="width:220px" type="text"/>
 </div>
-<div class="right"><button class="accent" id="gdriveBackupBtn">☁️Google</button>
+<div class="right"><button class="accent" id="gdriveBackupBtn" onclick="initGoogleBackup()">☁️Google</button>
 <button class="accent" id="newBtn">新增訂單</button>
 <button id="newExpenseBtn">新增花費</button>
 <button id="exportJson">匯出JSON</button>
